--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <html><title>Tin Mitt Records</title></title>
-<body>
+<body style="background-color:c0c0c0;">
+<center></center>
 
-  This is a test doot dooo
-  
+<center>&nbsp;
+<table align="center" border="2" cellpadding="25" cellspacing="2" height="421" width="666">
+	<tbody>
+		<tr>
+			<td bgcolor="ffffff" style="text-align: center;">
+			<p><span style="font-size:36px;"><strong><font face="courier"><font color="0033FF"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="0033FF"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
+
+			<p><br />
+			<span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
+			<strong><em><span style="font-size:72px;">P I N C H</span></em></strong><br />
+			<span style="font-size:24px;">A benefit compilation of 60-second songs<br />
+			benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a><br />
+			<br />
+			<u>FEATURING ALL OF THESE ARTISTS:</u></span><br />
+			<span style="font-size: 18px;">EN&#39;B, The Holographic Sticker Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg Hatem, Powerwasher, Consumer Culture, Pluot, Sabrina Jr., Tristan Heles, Joseph DeSimone, Alien00d, Past Pawn, FROGSMOG, Ino, Dominique Diglio, Excellent Strategy Manuals Inc., Magic Item, Ghoul Smock, Eyelashes!, mc crying croc and the seeds of gloom, Megazillion, Sin Veadler, Fabian Meister, Mike Allison, Maryan &amp; Arpan, sleep queen, Tildas, Corey Thuro, Curving Tooth, Mickey Dehn, Mason McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri Fedoruk, The Hand of Dog,&nbsp;:loading:, Eli &amp; The Bingo Balls, Injurious Stim</span></p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</center>
 </body>
 
 </html>
