--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 			benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a><br />
 			<br />
 			<u>FEATURING ALL OF THESE ARTISTS:</u></span><br />
-			<span style="font-size: 18px;">EN&#39;B, The Holographic Sticker Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg Hatem, Powerwasher, Consumer Culture, Pluot, Sabrina Jr., Tristan Heles, Joseph DeSimone, Alien00d, Past Pawn, FROGSMOG, Ino, Dominique Diglio, Excellent Strategy Manuals Inc., Magic Item, Ghoul Smock, Eyelashes!, mc crying croc and the seeds of gloom, Megazillion, Sin Veadler, Fabian Meister, Mike Allison, Maryan &amp; Arpan, sleep queen, Tildas, Corey Thuro, Curving Tooth, Mickey Dehn, Mason McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri Fedoruk, The Hand of Dog,&nbsp;:loading:, Eli &amp; The Bingo Balls, Injurious Stim</span></p>
+			<span style="font-size: 18px;">EN&#39;B, The Holographic Sticker Club, 50&#39;♀, Hexgirlfriends, Mothpuppy,<br />
+			mosaictheanimated, Greg Hatem, Powerwasher, Consumer Culture, Pluot,<br />
+			Sabrina Jr., Tristan Heles, Joseph DeSimone, Alien00d, Past Pawn, FROGSMOG,<br />
+			Ino, Dominique Diglio, Excellent Strategy Manuals Inc., Magic Item,<br />
+			Ghoul Smock, Eyelashes!, mc crying croc and the seeds of gloom, Megazillion,<br />
+			Sin Veadler, Fabian Meister, Mike Allison, Maryan &amp; Arpan, sleep queen,<br />
+			Tildas, Corey Thuro, Curving Tooth, Mickey Dehn, Mason McClusky, mae,<br />
+			THEOTONE, Jxozi, QQQ, JOAN, Dmitri Fedoruk, The Hand of Dog,<br />
+			:loading:, Eli &amp; The Bingo Balls, Injurious Stim</span></p>
 			</td>
 		</tr>
 	</tbody>
