--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 			Tildas, Corey Thuro, Curving Tooth, Mickey Dehn, Mason McClusky, mae,<br />
 			THEOTONE, Jxozi, QQQ, JOAN, Dmitri Fedoruk, The Hand of Dog,<br />
 			:loading:, Eli &amp; The Bingo Balls, Injurious Stim</span></p>
+				
+
+			<p></p>
+
+			<p><strong><span style="font-size:22px;">FOLLOW US ON <a href="https://tinmittrecords.bandcamp.com" target="_blank">BANDCAMP</a>&nbsp;AND <a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></strong></p>
 			</td>
 		</tr>
 	</tbody>
