--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="ffffff" style="text-align: center;">
-			<p><span style="font-size:36px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ffff00"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
+			<p><span style="font-size:36px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
 
 			<p><br />
 			<span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
