--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			<p></p>
 
-			<p><strong><span style="font-size:22px;">FOLLOW US ON <a href="https://tinmittrecords.bandcamp.com" target="_blank">BANDCAMP</a>&nbsp;AND <a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></strong></p>
+			<p><strong><span style="font-size:22px;">FOLLOW US ON <a href="https://tinmitt.bandcamp.com" target="_blank">BANDCAMP</a>&nbsp;AND <a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></strong></p>
 			</td>
 		</tr>
 	</tbody>
