--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
 			benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a><br />
 			<br />
 			<u>FEATURING ALL OF THESE ARTISTS:</u></span><br />
-			<span style="font-size: 18px;">EN&#39;B, The Holographic Sticker Club, 50&#39;♀, Hexgirlfriends, Mothpuppy,<br />
-			mosaictheanimated, Greg Hatem, Powerwasher, Consumer Culture, Pluot,<br />
-			Sabrina Jr., Tristan Heles, Joseph DeSimone, Alien00d, Past Pawn, FROGSMOG,<br />
-			Ino, Dominique Diglio, Excellent Strategy Manuals Inc., Magic Item,<br />
-			Ghoul Smock, Eyelashes!, mc crying croc and the seeds of gloom, Megazillion,<br />
-			Sin Veadler, Fabian Meister, Mike Allison, Maryan &amp; Arpan, sleep queen,<br />
-			Tildas, Corey Thuro, Curving Tooth, Mickey Dehn, Mason McClusky, mae,<br />
-			THEOTONE, Jxozi, QQQ, JOAN, Dmitri Fedoruk, The Hand of Dog,<br />
-			:loading:, Eli &amp; The Bingo Balls, Injurious Stim</span></p>
+			<span style="font-size: 18px;">EN&#39;B, The&nbsp;Holographic&nbsp;Sticker&nbsp;Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg&nbsp;Hatem, Powerwasher, Consumer&nbsp;Culture, Pluot, Sabrina&nbsp;Jr., Tristan&nbsp;Heles, Joseph&nbsp;DeSimone, Alien00d, Past&nbsp;Pawn, FROGSMOG, Ino, Dominique&nbsp;Diglio, Excellent&nbsp;Strategy&nbsp;Manuals&nbsp;Inc., Magic&nbsp;Item, Ghoul&nbsp;Smock, Eyelashes!, mc&nbsp;crying&nbsp;croc&nbsp;and&nbsp;the&nbsp;seeds&nbsp;of&nbsp;gloom, Megazillion, Sin&nbsp;Veadler, Fabian&nbsp;Meister, Mike&nbsp;Allison, Maryan&nbsp;&amp;&nbsp;Arpan, sleep&nbsp;queen, Tildas, Corey&nbsp;Thuro, Curving&nbsp;Tooth, Mickey&nbsp;Dehn, Mason&nbsp;McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri&nbsp;Fedoruk, The&nbsp;Hand&nbsp;of&nbsp;Dog, :loading:, Eli&nbsp;&amp;&nbsp;The&nbsp;Bingo&nbsp;Balls, Injurious&nbsp;Stim</span></p>
 				
 
 			<p></p>
