--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<p><span style="font-size:36px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
 
 			<p><br>
-				<img src="tinmittlogo.jpg">
+				<img src="tinmittlogosmall.png">
 				<br />
 			<span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
 			<strong><em><span style="font-size:72px;">P I N C H</span></em></strong><br />
