--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<tr>
 			<td bgcolor="ffffff" style="text-align: center;">
 			<p><span style="font-size:36px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
-
-			<p><br>
-				<img src="tinmittlogosmall.png">
+			<p>
+				<img alt="Tin Mitt Records logo" src="/compilation/pinch/tinmittlogo.jpg" style="width: 175px; height: 175px;" />
 				<br />
 			<span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
 			<strong><em><span style="font-size:72px;">P I N C H</span></em></strong><br />
