--- a/pinch-liner-notes-2.html
+++ b/pinch-liner-notes-2.html
@@ -150,7 +150,7 @@
 			<br />
 			Web design by PK Kim</span></p>
 
-			<p style="text-align: center;"><img alt="Tin Mitt Records logo" src="/compilation/pinch/tinmittlogo.jpg" style="width: 175px; height: 175px;" /><br />
+			<p style="text-align: center;"><img alt="Tin Mitt Records logo" src="tinmittlogo.jpg" style="width: 175px; height: 175px;" /><br />
 			<span style="font-size:20px;"><strong><span style="color:#df3d3d;">❤</span> Tin Mitt Records <span style="color:#df3d3d;">❤</span></strong></span></p>
 			</td>
 		</tr>
@@ -2463,7 +2463,7 @@
 			</table>
 
 			<p style="text-align: center;"><!--/TOP BUTTON--><br />
-			<img alt="wow! pinch! 1 minute songs, 2022" src="/compilation/pinch/pinch-mspaint-animated.gif" style="width: 242px; height: 231px;" /><br />
+			<img alt="wow! pinch! 1 minute songs, 2022" src="pinch-mspaint-animated.gif" style="width: 242px; height: 231px;" /><br />
 			<span style="font-size:20px;"><em>Thanks for listening!!!</em></span></p>
 
 			<p><span style="font-family:Times New Roman,Times,serif;"><b><u><a id="stats" name="stats"></a></u></b></span></p>
