--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 		<tr>
 			<td bgcolor="ffffff" style="text-align: center;">
 			<p><span style="font-size:36px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span></p>
-			<p>
-				<img alt="Tin Mitt Records logo" src="tinmittlogo.jpg" style="width: 175px; height: 175px;" />
-				<br />
-			<span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
-			<strong><em><span style="font-size:72px;">P I N C H</span></em></strong><br />
+				<p><img alt="Tin Mitt Records logo" src="tinmittlogo.jpg" style="width: 175px; height: 175px;" /></p>
+			<p></p><span style="font-size:28px;">C O M I N G&nbsp; &nbsp; S O O N:</span><br />
+			<strong><em><span style="font-size:72px;"><img src="pinchgoo.gif"></span></em></strong><br />
 			<span style="font-size:24px;">A benefit compilation of 60-second songs<br />
-			benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a><br />
+			benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a></p>
 			<br />
 			<u>FEATURING ALL OF THESE ARTISTS:</u></span><br />
 			<span style="font-size: 18px;">EN&#39;B, The&nbsp;Holographic&nbsp;Sticker&nbsp;Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg&nbsp;Hatem, Powerwasher, Consumer&nbsp;Culture, Pluot, Sabrina&nbsp;Jr., Tristan&nbsp;Heles, Joseph&nbsp;DeSimone, Alienood, Past&nbsp;Pawn, FROGSMOG, Ino, Dominique&nbsp;Diglio, Excellent&nbsp;Strategy&nbsp;Manuals&nbsp;Inc., Magic&nbsp;Item, Ghoul&nbsp;Smock, Eyelashes!, mc&nbsp;crying&nbsp;croc&nbsp;and&nbsp;the&nbsp;seeds&nbsp;of&nbsp;gloom, Megazillion, Sin&nbsp;Veadler, Fabian&nbsp;Meister, Mike&nbsp;Allison, Maryan&nbsp;&amp;&nbsp;Arpan, sleep&nbsp;queen, Tildas, Corey&nbsp;Thuro, Curving&nbsp;Tooth, Mickey&nbsp;Dehn, Mason&nbsp;McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri&nbsp;Fedoruk, The&nbsp;Hand&nbsp;of&nbsp;Dog, :loading:, Eli&nbsp;&amp;&nbsp;The&nbsp;Bingo&nbsp;Balls, Injurious&nbsp;Stim</span></p>
