--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -230,7 +230,7 @@
 			<strong>07. </strong><a href="#7">Maryam and Arpan - ادراك (Realization)</a><br />
 			<strong>08. </strong><a href="#8">sleep queen - Garden</a><br />
 			<strong>09. </strong><a href="#9">The Holographic Sticker Club - Refreshing 2</a><br />
-			<strong>10. </strong><a href="#10">EN&#39;B - Mercy (co-produced by Alienood420)</a><br />
+			<strong>10. </strong><a href="#10">EN&#39;B - Mercy (co-produced by Alienood)</a><br />
 			<strong>11. </strong><a href="#11">Fabian Meister - Unlikely Construction Site</a><br />
 			<strong>12. </strong><a href="#12">Tildas - You&#39;ll Understand</a><br />
 			<strong>13</strong>. <a href="#13">Ghoul Smock - Chided Once Again by a Jubilant Old Crone</a><br />
