--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -2420,8 +2420,8 @@
 					</tr>
 				</tbody>
 			</table>
-
-			<p style="text-align: center;"><!--/TOP BUTTON--><br />
+<!--/TOP BUTTON-->
+			<p style="text-align: center;">
 			<img alt="wow! pinch! 1 minute songs, 2022" src="pinch-mspaint-animated.gif" style="width: 242px; height: 231px;" /><br />
 			<span style="font-size:20px;"><em>Thanks for listening!!!</em></span></p>
 
