--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -1,4 +1,3 @@
-
 <html>
 <head><meta charset="utf-8">
 	<title>PINCH</title>
@@ -18,22 +17,28 @@
 
 			<center>PINCH, a compilation of new sixty second songs.<br />
 			<span style="color:#ffffff;"><span style="font-size:36px;"><em><strong><span style="background-color:#000000;">🟊TABLE OF CONTENTS🟊</span></strong></em></span></span><br />
-			(click a title to jump ahead to your desired section)
-			<table border="0" cellpadding="1" cellspacing="1" height="238" width="517">
+			(click a title to jump ahead to your desired section)</center>
+
+			<center>
+			<table border="0" cellpadding="1" cellspacing="1" height="238" width="700">
 				<tbody>
 					<tr>
 					</tr>
 					<tr>
+						<td><img alt="" src="https://f4.bcbits.com/img/a2512944528_10.jpg" style="width: 200px; height: 200px;" /></td>
 						<td><span style="font-size:28px;"><strong>1. </strong><a href="#intro">Introduction</a><br />
 						<strong>2.</strong> <a href="#safehaven">Baltimore Safe Haven</a><br />
-						<strong>3.</strong> <a href="#albumcredits">Album credits</a><br />
-						<strong>4.</strong> <a href="#100lifestyle">The benefits of a 1:00 song lifestyle</a><br />
-						<strong>5.</strong> <a href="#tracklist">Full tracklist and individual track credits</a><br />
-						<strong>6.</strong> <a href="#stats">Final stats</a></span></td>
+						<strong>3.</strong> <a href="#albumcredits">Album Credits</a><br />
+						<strong>4.</strong> <a href="#100lifestyle">The Benefits of a 1:00 Song Lifestyle</a><br />
+						<strong>5.</strong> <a href="#tracklist">Full Album Tracklist</a><br />
+						<strong>6.</strong>&nbsp;<a href="#1">Individual Song/Artist Info</a><br />
+						<strong>7.</strong> <a href="#stats">Final Stats</a></span></td>
 					</tr>
 				</tbody>
 			</table>
 			</center>
+
+			<center></center>
 			</td>
 		</tr>
 	</tbody>
@@ -2420,9 +2425,9 @@
 					</tr>
 				</tbody>
 			</table>
-<!--/TOP BUTTON-->
-			<p style="text-align: center;">
-			<img alt="wow! pinch! 1 minute songs, 2022" src="pinch-mspaint-animated.gif" style="width: 242px; height: 231px;" /><br />
+			<!--/TOP BUTTON-->
+
+			<p style="text-align: center;"><img alt="wow! pinch! 1 minute songs, 2022" src="pinch-mspaint-animated.gif" style="width: 242px; height: 231px;" /><br />
 			<span style="font-size:20px;"><em>Thanks for listening!!!</em></span></p>
 
 			<p><span style="font-family:Times New Roman,Times,serif;"><b><u><a id="stats" name="stats"></a></u></b></span></p>
@@ -2466,4 +2471,3 @@
 </table>
 </body>
 </html>
-
