--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -2460,7 +2460,7 @@
 						<p style="text-align: right;"><span style="color:#ffffff"><span style="font-family:times new roman,times,serif"><a href="#top"><em>BACK TO TOP</em></a></span></span><br />
 						&nbsp;</p>
 
-						<p style="text-align: center;"><em><a href="https://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
+						<p style="text-align: center;"><img src="pinch-pixel.png" alt="Pinch album cover in tiny pixel form"><br><em><a href="https://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
 						</td>
 					</tr>
 				</tbody>
