--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -2443,7 +2443,7 @@
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><b>Median song length: </b>1:00</span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><b>Song length mode: </b>1:00</span></span><br />
 						<br />
-						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Languages (lyrics and titles): </strong>6</span></span><br />
+						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Languages (lyrics and titles): </strong>6<img alt="" src="pinch-pixel-2.png" style="float: right; width: 95px; height: 95px;" /></span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Countries recorded in:</strong> at least 5</span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Bird species mentioned: </strong>4</span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Individual humans who contributed to this album: </strong>at least 60</span></span></p>
@@ -2460,7 +2460,8 @@
 						<p style="text-align: right;"><span style="color:#ffffff"><span style="font-family:times new roman,times,serif"><a href="#top"><em>BACK TO TOP</em></a></span></span><br />
 						&nbsp;</p>
 
-						<p style="text-align: center;"><img src="pinch-pixel.png" alt="Pinch album cover in tiny pixel form"><br><em><a href="https://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
+						<p style="text-align: center;"><img alt="Pinch album cover in tiny pixel form" src="pinch-pixel.png" /><br />
+						<em><a href="https://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
 						</td>
 					</tr>
 				</tbody>
