--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -16,7 +16,7 @@
 			<center></center>
 
 			<center>PINCH, a compilation of new sixty second songs.<br />
-			<span style="color:#ffffff;"><span style="font-size:36px;"><em><strong><span style="background-color:#000000;">🟊TABLE OF CONTENTS🟊</span></strong></em></span></span><br />
+			<span style="color:#ffffff;"><span style="font-size:36px;"><em><strong><span style="background-color:#000000;">★TABLE OF CONTENTS★</span></strong></em></span></span><br />
 			(click a title to jump ahead to your desired section)</center>
 
 			<center>
