--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -101,7 +101,7 @@
 	<tbody>
 		<tr>
 			<td style="background-color: rgb(255, 0, 0);">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:48px;"><strong>Baltimore Safe Haven</strong></span></span></p>
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:48px;"><strong>BALTIMORE SAFE HAVEN</strong></span></span></p>
 			</td>
 		</tr>
 		<tr>
