--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -221,7 +221,7 @@
 		<tr>
 			<td style="background-color: rgb(255, 0, 0);">
 			<p style="text-align: center;"><span style="font-size:48px;"><span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong>TRACKLIST</strong></span></span></span><br />
-			<span style="font-size:20px;"><span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong><span><em>(click a title to jump to info about it!)</em></span></strong></span></span></span></p>
+			span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong><span><em>(click a title to jump to info about it!)</em></span></strong></span></span></p>
 			</td>
 		</tr>
 		<tr>
