--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -267,7 +267,7 @@
 			<strong>39. </strong><a href="#39">Mothpuppy - Cat on the Roof</a><br />
 			<br />
 			<strong>BONUS TRACKS</strong></span><br />
-			<em>(available with purchased digital download or on the limited cassette release)</em><br />
+			<em>(available on purchased <a href="https://tinmitt.bandcamp.com/album/pinch" target="_blank">digital copy and cassette release</a>)</em><br />
 			<span style="font-size:18px;"><strong>B*01.</strong> <a href="#b1">:loading: - take it / you failed</a><br />
 			<strong>B*02.</strong> <a href="#b2">Magic Item - Pinch</a><br />
 			<strong>B*03.</strong> <a href="#b3">Bingo Night at Pinch Palace</a><br />
