--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -72,7 +72,7 @@
 			<td>
 			<p><span style="font-size:18px;">Hello intrepid listener! Thank you for listening to <strong>PINCH, </strong>the first compilation release by Tin Mitt Records. If you don&rsquo;t already know, every single track on PINCH is ~exactly~ <b>one minute long</b> (1:00). This was the only constraint/prompt given to participants (along with the title) and everyone responded to it in vastly different ways. I could not possibly be more grateful to all of the artists who submitted work to this album! Of course it wouldn&rsquo;t exist without everyone&rsquo;s tracks, but it wouldn&rsquo;t be so <i>incredible</i> without everyone&rsquo;s tracks being <i>really really cool.</i>. I highly recommend that you listen to the full album in its entirety without skipping tracks because these artists made <strong>brand new</strong> <strong>original tracks</strong> specifically for this compilation. Take breaks if you need to. Heck, download it and put it on shuffle or make up your own track order if you want!<br />
 			<br />
-			This album took a little over a year from the time of conception to release. A lot of that time delay was due to me getting COVID for the first time literally on the day of the submission deadline, which took me several months to recover from. But hey we did it! Oof!<br />
+			This album took a little over a year from the time of conception to release. A lot of that time delay was due to me getting COVID for the first time literally on the day of the submission deadline, which took me several months to recover from... and then a year of long covid screwing up my executive functioning.. But hey!! We did it! Oof!<br />
 			<br />
 			PINCH was primarily written and recorded March 2022 - June 2022 by many many artists. Most of the artists on this album are from occupied Piscataway land known colonially as Baltimore MD, but there&rsquo;s a handful of contributors from all around the globe. Not all of the artists on this album are queer but the majority of them are, and yknow what? like half of them are trans. So that&#39;s pretty cool.<br />
 			<br />
@@ -146,7 +146,7 @@
 		<tr border="0">
 			<td border="0">
 			<p><span style="font-size:18px;">Produced and facilitated by PK Kim<br />
-			Mastered by Garret Long and Tristan Heles @ <a href="https://thewatermelonroom.com/" target="_blank">The Watermelon Room</a><br />
+			Mastered by Garrett Long and Tristan Heles @ <a href="https://thewatermelonroom.com/" target="_blank">The Watermelon Room</a><br />
 			Artwork and design by PK Kim<br />
 			<br />
 			Credits for each artist and song can be found in the individual track listings below. Artists were given optional interview questions to respond to as well. All information and lyrics are provided (or omitted) directly by each individual artist.<br />
@@ -187,7 +187,7 @@
 		</tr>
 		<tr>
 			<td>
-			<p><span style="font-size:18px;"><strong>I didn&#39;t come up with the idea of an album of exclusively one-minute-long songs.</strong> PINCH was directly inspired by both <u><em>The Commercial Album</em></u> (by The Residents, 1980) and <u><em>Whack World</em></u> (by Tierra Whack, 2018), both of which are entirely made up of minute-long songs. It wasn&#39;t until part-way through production of PINCH that an album contributor also introduced me to Morgan Fisher&#39;s <u><em>Miniatures</em></u> compilations (1980, 2000).<br />
+			<p><span style="font-size:18px;">I didn&#39;t come up with the idea of an album of exclusively one-minute-long songs. PINCH was directly inspired by both <u><em>The Commercial Album</em></u> (by The Residents, 1980) and <u><em>Whack World</em></u> (by Tierra Whack, 2018), both of which are entirely made up of minute-long songs. It wasn&#39;t until part-way through production of PINCH that an album contributor also introduced me to Morgan Fisher&#39;s <u><em>Miniatures</em></u> compilations (1980, 2000).<br />
 			<br />
 			I first adapted the idea of a hard time limit into a FROGSMOG solo album where all the songs are 100 seconds long <em>(currently still unreleased at the time of writing this)</em>. Through that, I found that having an arbitrary short time limitation allowed me to really focus in sharply on a single idea. There&#39;s no room to aimlessly wander off, and no room to slowly establish or build up things. The essence of the song gets compressed and becomes highly potent. Anything added to the song becomes equally as important as every other part. No part really fades into the background. Everything is highly present. It&#39;s a very satisfying way to approach songwriting and I wanted to share this joy with others by <strong>forcing them </strong>to adhere to a strict time limit.<br />
 			<br />
@@ -1437,7 +1437,7 @@
 		</tr>
 		<tr>
 			<td>
-			<p><a href="https://soundcloud.com/user-771431082" target="_blank">QQQ on Spotify</a></p>
+			<p><a href="https://soundcloud.com/user-771431082" target="_blank">QQQ on soundcloud</a></p>
 
 			<p><strong>How did the time limit effect your songwriting?</strong><br />
 			&quot;Ig has trained me well&quot;</p>
@@ -1488,7 +1488,7 @@
 			<p><span style="font-family:Times New Roman,Times,serif;">I&#39;d like to thank Trolli&#39;s Corporation for being the drug of Glam Folk.</span><br />
 			<br />
 			<a href="https://eyelashes.bandcamp.com/" target="_blank">Eyelashes! on Bandcamp</a><br />
-			<a href="http://youtube.com/glitterswamp" target="_blank">Eyelashes! on YouTube</a><br />
+			<a href="http://youtube.com/baggypantsrich" target="_blank">Eyelashes! on YouTube</a><br />
 			<a href="https://instagram.com/glitter.swamp" target="_blank">Eyelashes! on Instagram</a></p>
 
 			<p><strong>What&#39;s the coolest thing you&#39;ve ever done in under a minute?</strong><br />
@@ -1928,7 +1928,7 @@
 			&quot;was gonna write more, but hit the end, and then stopped instead.&quot;</p>
 
 			<p><strong>What&#39;s the coolest thing you&#39;ve ever done in under a minute?</strong><br />
-			&quot;stole the ancient Ruby of G&#39;Hoth&#39;h&quot;</p>
+			&quot;gee, i used to be really good at that cup stacking thing&quot;</p>
 
 			<p><strong>Any other thoughts?</strong><br />
 			&quot;most of this song was written in the bathroom, in fact!&quot;</p>
@@ -2355,8 +2355,8 @@
 						<b>Written by Eli &amp; The Bingo Balls</b><br />
 						Eli Leighton - bingo caller<br />
 						John Pumpkins - bingo baller<br />
-						Blanche DaFuc - bingo<br />
-						Bingo Starr - bongos</span></p>
+						Gladys Dafuc - bingo<br />
+						Bingo Star - bongos</span></p>
 						</td>
 					</tr>
 					<tr>
