--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -187,13 +187,13 @@
 		</tr>
 		<tr>
 			<td>
-			<p><span style="font-size:18px;">I didn&#39;t come up with the idea of an album of exclusively one-minute-long songs. PINCH was directly inspired by both <u><em>The Commercial Album</em></u> (by The Residents, 1980) and <u><em>Whack World</em></u> (by Tierra Whack, 2018), both of which are entirely made up of minute-long songs. It wasn&#39;t until part-way through production of PINCH that an album contributor also introduced me to Morgan Fisher&#39;s <u><em>Miniatures</em></u> compilations (1980, 2000).<br />
+			<p><span style="font-size:18px;">PINCH was directly inspired by both <u><em>The Commercial Album</em></u> (by The Residents, 1980) and <u><em>Whack World</em></u> (by Tierra Whack, 2018), both of which are entirely made up of minute-long songs. It wasn&#39;t until part-way through production of PINCH that an album contributor also introduced me to Morgan Fisher&#39;s <u><em>Miniatures</em></u> compilations (1980, 2000).<br />
 			<br />
-			I first adapted the idea of a hard time limit into a FROGSMOG solo album where all the songs are 100 seconds long <em>(currently still unreleased at the time of writing this)</em>. Through that, I found that having an arbitrary short time limitation allowed me to really focus in sharply on a single idea. There&#39;s no room to aimlessly wander off, and no room to slowly establish or build up things. The essence of the song gets compressed and becomes highly potent. Anything added to the song becomes equally as important as every other part. No part really fades into the background. Everything is highly present. It&#39;s a very satisfying way to approach songwriting and I wanted to share this joy with others by <strong>forcing them </strong>to adhere to a strict time limit.<br />
+			I first adapted that idea of a hard time limit into a FROGSMOG album full of 100-second-long songs&nbsp;<em>(currently unreleased)</em>. Through that process, I found that having a short arbitrary time limitation allowed me to really focus in sharply on a single idea. There&#39;s no room to aimlessly wander off, and no room to slowly establish or build up things. The essence of the song gets compressed and becomes highly potent. Anything added to the song becomes equally as important as every other part. No part really fades into the background - everything is highly present. It&#39;s a very satisfying way to approach songwriting and I wanted to share this joy with others by <strong>forcing them </strong>to adhere to a strict time limit.<br />
 			<br />
 			<strong>The benefits a one (1) minute long song compilation are clear</strong><strong>.</strong> New, less-experienced artists are given an easy goal to work towards. More experienced artists can make something without worrying about larger albums and overarching projects. Everyone on this album is on the same level playing field. Everyone gets the exact same time in the spotlight. A 1:00 song is sturdy. A 1:00 stands strong on its own, but even stronger amongst its kin. Every track is in constant conversation with every other track and together they build the world of PINCH.<br />
 			<br />
-			You could, if you wish, see the theme and time limit as a commentary / reflection on any number of <strong>big thematic aspects about the world we currently live in</strong> --- the way time is used as a tool for oppression, endless short-form social media feeds, the attention economy, the constant sense of urgency that western society constantly manifests (the ol&#39; &quot;hustle n bustle&quot;), the ticking clock of global disasters, infinite growth and excess consumption, planned obsolescence, maximalism vs minimalism, and even death (the final time limit). In all honesty though, for my part, I just thought making everyone write a 1:00 song would be funny (I was right). However, many artists DID use the prompt to reflect on these larger themes and so many more. And WOW I thank them for it. They gave this silly little gimmick a depth I would have never imagined on my own. I think in the end, this album is so many things, because it was made by so many people. Please attribute any interpretation to this album that you feel is fitting.<br />
+			You could, if you wish, see this theme and time limit as a commentary or reflection on any number of <strong>big thematic aspects about the world we currently live in</strong> --- the way time is used as a tool of oppression, endless short-form social media feeds, the attention economy, the constant sense of urgency that capitalism manifests (the ol&#39; &quot;hustle n bustle&quot;), the ticking clock of global disasters, infinite growth and excess consumption, planned obsolescence, maximalism vs minimalism, and even death (&quot;the final time limit&quot;). In all honesty, when I started this project, I mostly just thought making everyone write a 1:00 song would be funny (I was right). However, many artists DID use the prompt to reflect on these larger themes and so many more. And WOW I thank them for it. They gave this silly little gimmick a depth I would have never imagined on my own. I think in the end, this album is so many things, because it was made by so many people. Please attribute any interpretation to this album that you feel is fitting.<br />
 			<br />
 			Don&#39;t forget to stop and smell the one minutes.<br />
 			<em>- PK</em></span></p>
@@ -221,7 +221,7 @@
 		<tr>
 			<td style="background-color: rgb(255, 0, 0);">
 			<p style="text-align: center;"><span style="font-size:48px;"><span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong>TRACKLIST</strong></span></span></span><br />
-			<span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong><span><em>(click a title to jump to info about it!)</em></span></strong></span></span></p>
+			<span style="color:#ffffff;"><span style="font-family:times new roman,times,serif;"><strong><span><em>(CLICK A TRACK TO JUMP TO INFO ABOUT IT!)</em></span></strong></span></span></p>
 			</td>
 		</tr>
 		<tr>
@@ -774,7 +774,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">11. &quot;<u>Unlikely Construction Site</u>&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">11. &quot;<u>Unlikely</u> <u>Construction</u> <u>Site</u>&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by Fabian Meister</span></span></span></span></p>
 			</td>
 		</tr>
@@ -906,7 +906,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">14. &quot;<u>Saturday Night</u></span></strong></em></span></span></span><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">14. &quot;<u>Saturday</u> <u>Night</u></span></strong></em></span></span></span><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by The Hand of Dog</span></span></span></span></p>
 			</td>
 		</tr>
@@ -1012,7 +1012,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">16. &quot;<u>Transfiguration at the Drag Race</u>&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">16. &quot;<u>Transfiguration</u> <u>at</u> <u>the</u> <u>Drag</u> <u>Race</u>&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by Corey Thuro</span></span></span></span></p>
 			</td>
 		</tr>
@@ -1901,7 +1901,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">33. &quot;<u>The Bath</u>&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">33. &quot;<u>The</u> <u>Bath</u>&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by Injurious Stim</span></span></span></span></p>
 			</td>
 		</tr>
@@ -1928,7 +1928,7 @@
 			&quot;was gonna write more, but hit the end, and then stopped instead.&quot;</p>
 
 			<p><strong>What&#39;s the coolest thing you&#39;ve ever done in under a minute?</strong><br />
-			&quot;gee, i used to be really good at that cup stacking thing&quot;</p>
+			&quot;gee i don&#39;t know... i used to be really good at that thing where you stack cups&quot;</p>
 
 			<p><strong>Any other thoughts?</strong><br />
 			&quot;most of this song was written in the bathroom, in fact!&quot;</p>
@@ -2091,7 +2091,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">37. &quot;<u>Citric Acid</u>&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">37. &quot;<u>Citric</u> <u>Acid</u>&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by THEOTONE</span></span></span></span></p>
 			</td>
 		</tr>
@@ -2247,7 +2247,7 @@
 				<tbody>
 					<tr>
 						<td bgcolor="0000ff">
-						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*01. &quot;<u>take it / you falied</u>&quot;</span></strong></em><br />
+						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*01. &quot;<u>take</u> <u>it</u> / <u>you</u> <u>failed</u>&quot;</span></strong></em><br />
 						<span style="background-color:#0000ff;">by :loading:</span></span></span></span></p>
 						</td>
 					</tr>
@@ -2345,7 +2345,7 @@
 				<tbody>
 					<tr>
 						<td bgcolor="0000ff">
-						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*03. &quot;<u>Bingo Night at Pinch Palace</u>&quot;</span></strong></em><br />
+						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*03. &quot;<u>Bingo</u> <u>Night</u> <u>at</u> <u>Pinch</u> <u>Palace</u>&quot;</span></strong></em><br />
 						<span style="background-color:#0000ff;">by Eli &amp; The Bingo Balls</span></span></span></span></p>
 						</td>
 					</tr>
@@ -2385,7 +2385,7 @@
 				<tbody>
 					<tr>
 						<td bgcolor="0000ff">
-						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*04. &quot;<u>Crab Song</u>&quot;</span></strong></em><br />
+						<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">B*04. &quot;<u>Crab</u> <u>Song</u>&quot;</span></strong></em><br />
 						<span style="background-color:#0000ff;">by Dominique Diglio</span></span></span></span></p>
 						</td>
 					</tr>
@@ -2445,7 +2445,7 @@
 						<br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Languages (lyrics and titles): </strong>6</span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Countries recorded in:</strong> at least 5</span></span><br />
-						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Bird species mentioned: </strong>4</span></span><br />
+						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Bird appearances: </strong>6</span></span><br />
 						⏵<span style="font-size:18px;"><span style="font-family:Times New Roman,Times,serif;"><strong>Individual humans who contributed to this album: </strong>at least 60</span></span></p>
 						</td>
 					</tr>
@@ -2457,9 +2457,10 @@
 				<tbody>
 					<tr>
 						<td>
-						<p style="text-align: right;"><span style="color:#ffffff"><span style="font-family:times new roman,times,serif"><a href="#top"><em>BACK TO TOP</em></a></span></span>					&nbsp;</p>
+						<p style="text-align: right;"><span style="color:#ffffff"><span style="font-family:times new roman,times,serif"><a href="#top"><em>BACK TO TOP</em></a></span></span> &nbsp;</p>
+
 						<p style="text-align: center;"><img alt="Pinch album cover in tiny pixel form" src="pinch-pixel.png" /><br />
-						<em><a href="https://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
+						<em><a href="http://tinmittrecords.com"><span style="font-family:times new roman,times,serif">BACK TO TINMITTRECORDS.COM</span></a></em><span style="font-family:times new roman,times,serif"><!--bgcolor="ffffff" --></span></p>
 						</td>
 					</tr>
 				</tbody>
