--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -701,7 +701,7 @@
 	<tbody>
 		<tr>
 			<td bgcolor="0000ff">
-			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">09. &quot;<u>Refreshing 2</u>&quot;</span></strong></em><br />
+			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">09. &quot;<u>Refreshing</u> <u>2</u>&quot;</span></strong></em><br />
 			<span style="background-color:#0000ff;">by The Holographic Sticker Club</span></span></span></span></p>
 			</td>
 		</tr>
