--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -264,7 +264,7 @@
 			<strong>36. </strong><a href="#36">Mason McClusky - Cosmic Menu Music</a><br />
 			<strong>37. </strong><a href="#37">THEOTONE - Citric Acid</a><br />
 			<strong>38. </strong><a href="#38">Mike Allison - From Tree to Door</a><br />
-			<strong>39. </strong><a href="#39">Mothpuppy - Cat on the Roof</a><br />
+			<strong>39. </strong><a href="#39">mothpuppy - Cat on the Roof</a><br />
 			<br />
 			<strong>BONUS TRACKS</strong></span><br />
 			<em>(available on purchased digital copy and cassette release)</em><br />
@@ -2191,7 +2191,7 @@
 		<tr>
 			<td bgcolor="0000ff">
 			<p style="text-align: center;"><span style="color:#ffffff;"><span style="font-size:26px;"><span style="font-family:times new roman,times,serif;"><em><strong><span style="background-color:#0000ff;">39. &quot;<u>Cat</u> <u>on</u> <u>the</u> <u>Roof</u>&quot;</span></strong></em><br />
-			<span style="background-color:#0000ff;">by Mothpuppy</span></span></span></span></p>
+			<span style="background-color:#0000ff;">by mothpuppy</span></span></span></span></p>
 			</td>
 		</tr>
 		<tr>
@@ -2211,8 +2211,8 @@
 		</tr>
 		<tr>
 			<td>
-			<p><span style="font-family:Times New Roman,Times,serif;"><a href="https://Mothpuppy.bandcamp.com">Mothpuppy on Bandcamp</a><br />
-			<a href="https://Instagram.com/mothpuppy">Mothpuppy on Instagram</a><br />
+			<p><span style="font-family:Times New Roman,Times,serif;"><a href="https://Mothpuppy.bandcamp.com">mothpuppy on Bandcamp</a><br />
+			<a href="https://Instagram.com/mothpuppy">mothpuppy on Instagram</a><br />
 			<br />
 			<strong>How did the time limit effect your songwriting?</strong><br />
 			&quot;It didn&rsquo;t really! Only thing I could think of is if I had had more time I might have tried to do more with recording but also I think there was plenty of time I&rsquo;ve just been really busy lately so that&rsquo;s on me.&quot;<br />
