--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -1818,13 +1818,13 @@
 			&quot;PNCH S N TH TTL&#39;S STLSTCLLY BSNT VWLS! THR JST WSNT NGH RM FR LL TH LTTRS N TH RDCLSLY LNG TRCK NM. HD T PNCH THS LTTRS TGTHR.&quot;<br />
 			<br />
 			<strong>How did the time limit effect your songwriting?</strong><br />
-			&quot;Both everything changed and nothing changed. I was already writing tiny song sketches but this gave them a reason to work together in at least ONE way, even if it was just working to fill 60 seconds of time. But also it forced me to go smaller and smaller and now most of my sketches lately have been in the 1-3 second range, which is cool and fun.&quot;</p>
+			&quot;BTH VRYTHNG CHNGD ND NTHNG CHNGD. WS LRDY WRTNG SMLL SNGS, BT THS GV THM RSN T WRK TGTHR, VN F T WS JST WRKNG T FLL 60 SCNDS F TM. T FRCD M T G SMLLR ND SMLLR ND NW MST F M SKTCHS LTLY HV BN N TH 1-3 SCND RNG, WHCH S CL ND FN.&quot;</p>
 
 			<p><strong>What&#39;s the coolest thing you&#39;ve ever done in under a minute?</strong><br />
-			&quot;&lt; ;-) -[--{ &nbsp;this&quot;</p>
+			&quot;&lt; ;-) -[--{ &nbsp;THS&quot;</p>
 
 			<p><strong>Any other thoughts?</strong><br />
-			&quot;This was cool and good and more people should do compilations for mediums they aren&#39;t super skilled or knowledgeable in and also not be afraid to make stuff that is extremely scrappy&quot;</p>
+			&quot;THS WS CL ND GD ND MR PPL SHLD PRTCPT N CMPLTNS FR MDMS TH RNT SPR SKLLD R KNWLDGBL N, ND LS NT B FRD T MK STFF THT S XTRMLY SCRPPY&quot;</p>
 			</td>
 		</tr>
 	</tbody>
