--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -307,7 +307,7 @@
 			<b>Written by Mickey Dehn and Jack Pinder</b><br />
 			Jack Pinder - vocals and guitar<br />
 			Mickey Dehn - bass<br />
-			Engineered and mastered by Sarah Michaels</span></p>
+			Engineered and mastered by Sarah Michaels<br><br>In memory of Bethany Petr</span></p>
 			</td>
 		</tr>
 		<tr>
