--- a/pinch-index-draft.html
+++ b/pinch-index-draft.html
@@ -1,49 +1,69 @@
 <html>
-<head>
+<head><meta charset="utf-8">
 	<title></title>
 </head>
-<body style="background-color:ffff00;"></body>
-</html>
-<p><br />
-<title></title>
-</p>
+<body style="background-color:ffff00;">
+<p></p>
 
-<center><br />
-<br />
-&nbsp;</center>
-
-<center>&nbsp;
 <table align="center" border="2" cellpadding="15" cellspacing="2" height="421" width="700">
 	<tbody>
 		<tr>
 			<td bgcolor="ffffff" colspan="2" style="text-align: center;">
-			<p><span style="font-size:28px;"><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts; TIN MITT RECORDS</span></font></font></strong><span style="font-family:Lucida Sans Unicode,Lucida Grande,sans-serif;">&nbsp;</span><strong><font face="courier"><font color="ff0000"><span style="font-family:times new roman,times,serif">&hearts;</span></font></font></strong></span><br />
-			<img alt="Tin Mitt Records logo" src="https://tinmittrecords.github.io/tinmittlogo.jpg" style="width: 87px; height: 87px;" /><br />
-			<span style="font-size:48px;">OUT NOW: <strong><em>&quot;PINCH&quot;</em></strong></span><br />
-			<span style="font-size:24px;">A benefit compilation of one-minute-long songs benefiting&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a></span></p>
+			<p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:28px;"><strong><font color="ff0000">&hearts; TIN MITT RECORDS</font></strong>&nbsp;<strong><font color="ff0000">&hearts;</font></strong></span><br />
+			<br />
+			<span style="font-size:48px;">OUT NOW!&nbsp;<span style="color:#ffffff;"><strong><em><span style="background-color:#000000;">&nbsp;&quot;PINCH&quot;&nbsp;</span></em></strong></span></span><br />
+			<span style="font-size:24px;">A benefit compilation of one-minute-long songs! Every song is one minute long! All proceeds go directly to&nbsp;<a href="https://www.baltimoresafehaven.org/home" target="_blank">Baltimore Safe Haven</a>!</span></span></p>
 			</td>
 		</tr>
 		<tr>
 			<td bgcolor="ffffff" style="text-align: center;"><img alt="" src="https://f4.bcbits.com/img/a3653462931_10.jpg" style="width: 350px; height: 350px;" /></td>
 			<td bgcolor="ffffff" style="text-align: center;">
-			<p><span style="font-size:26px;"><a href="https://tinmitt.bandcamp.com" target="_blank">STREAM AND DOWNLOAD</a><br />
+			<p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:26px;"><a href="https://tinmitt.bandcamp.com" target="_blank">STREAM AND DOWNLOAD</a><br />
 			<br />
-			BUY A CASSETTE TAPE<br />
 			<br />
-			<a href="https://pinch-liner-notes-draft.html">LINER NOTES: READ ABOUT THE ALBUM AND THE ARTISTS</a></span></p>
+			<a href="pinch-liner-notes-draft.html"><strong>LINER NOTES:</strong> READ ABOUT THE ALBUM AND THE ARTISTS!</a><br />
+			<br />
+			<br />
+			BUY A CASSETTE TAPE</span></span></p>
 			</td>
 		</tr>
 		<tr>
-			<td bgcolor="ffffff" colspan="2" style="text-align: center;"><span style="font-size:24px;"><u><img alt="" src="https://tinmittrecords.github.io/pinchwowblam.gif" style="float: right; width: 337px; height: 333px;" />FEATURING:</u></span><br />
-			<span style="font-size: 18px;">EN&#39;B, The&nbsp;Holographic&nbsp;Sticker&nbsp;Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg&nbsp;Hatem, Powerwasher, Consumer&nbsp;Culture, Pluot, Sabrina&nbsp;Jr., Tristan&nbsp;Heles, Joseph&nbsp;DeSimone, Alienood, Past&nbsp;Pawn, FROGSMOG, Ino, Dominique&nbsp;Diglio, Excellent&nbsp;Strategy&nbsp;Manuals&nbsp;Inc., Magic&nbsp;Item, Ghoul&nbsp;Smock, Eyelashes!, mc&nbsp;crying&nbsp;croc&nbsp;and&nbsp;the&nbsp;seeds&nbsp;of&nbsp;gloom, Megazillion, Sin&nbsp;Veadler, Fabian&nbsp;Meister, Mike&nbsp;Allison, Maryan&nbsp;&amp;&nbsp;Arpan, sleep&nbsp;queen, Tildas, Corey&nbsp;Thuro, Curving&nbsp;Tooth, Mickey&nbsp;Dehn, Mason&nbsp;McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri&nbsp;Fedoruk, The&nbsp;Hand&nbsp;of&nbsp;Dog, :loading:, Eli&nbsp;&amp;&nbsp;The&nbsp;Bingo&nbsp;Balls, Injurious&nbsp;Stim</span></td>
+			<td bgcolor="ffffff" colspan="2">
+			<table border="0" cellpadding="0" cellspacing="0" style="width:690px;">
+				<tbody>
+					<tr>
+						<td><span style="font-family:Times New Roman,Times,serif;"><strong><em><span style="font-size:26px;"><u>FEATURING:</u></span></em></strong><br />
+						<span style="font-size: 18px;">EN&#39;B, The&nbsp;Holographic&nbsp;Sticker&nbsp;Club, 50&#39;♀, Hexgirlfriends, Mothpuppy, mosaictheanimated, Greg&nbsp;Hatem, Powerwasher, Consumer&nbsp;Culture, Pluot, Sabrina&nbsp;Jr., Tristan&nbsp;Heles, Joseph&nbsp;DeSimone, Alienood, Past&nbsp;Pawn, FROGSMOG, Ino, Dominique&nbsp;Diglio, Ghoul&nbsp;Smock, Eyelashes!, Excellent&nbsp;Strategy&nbsp;Manuals&nbsp;Inc., Magic&nbsp;Item, mc&nbsp;crying&nbsp;croc&nbsp;and&nbsp;the&nbsp;seeds&nbsp;of&nbsp;gloom, Megazillion, Sin&nbsp;Veadler, Fabian&nbsp;Meister, Mike&nbsp;Allison, Maryan&nbsp;&amp;&nbsp;Arpan, sleep&nbsp;queen, Tildas, Corey&nbsp;Thuro, Curving&nbsp;Tooth, Mickey&nbsp;Dehn, Mason&nbsp;McClusky, mae, THEOTONE, Jxozi, QQQ, JOAN, Dmitri&nbsp;Fedoruk, The&nbsp;Hand&nbsp;of&nbsp;Dog, :loading:, Eli&nbsp;&amp;&nbsp;The&nbsp;Bingo&nbsp;Balls, Injurious&nbsp;Stim</span></span></td>
+						<td><span style="font-size:24px;"><u><img alt="" src="https://tinmittrecords.github.io/pinchwowblam.gif" style="float: right; width: 337px; height: 333px;" /></u></span></td>
+					</tr>
+				</tbody>
+			</table>
+			</td>
 		</tr>
 		<tr>
 			<td bgcolor="ffffff" colspan="2" style="text-align: center;">
-			<p><strong><span style="font-size:22px;">FOLLOW US ON:</span></strong><br />
-			<strong><span style="font-size:22px;"><a href="https://tinmitt.bandcamp.com" target="_blank">BANDCAMP</a>&nbsp;<br />
-			<a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></strong></p>
+			<table align="center" border="0" cellpadding="0" cellspacing="0" style="width:300px;">
+				<tbody>
+					<tr>
+						<td style="text-align: center;"><img alt="" src="https://tinmittrecords.github.io/tinmittlogo.jpg" style="width: 87px; height: 87px;" /></td>
+						<td><span style="font-size:22px;">FOLLOW US ON:</span><br />
+						<span style="font-size:22px;"><a href="https://tinmitt.bandcamp.com" target="_blank">BANDCAMP</a><br />
+						<a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></td>
+					</tr>
+				</tbody>
+			</table>
+			&nbsp;
+
+			<table align="center" border="0" cellpadding="0" cellspacing="0" style="width:300px;">
+				<tbody>
+					<tr>
+						<td style="text-align: center;"><span style="font-family:Times New Roman,Times,serif;">Tin Mitt Records is a &quot;record label&quot; focusing on benefit compilations with unique challenges and gimmicks started by PK Kim in 2022.</span></td>
+					</tr>
+				</tbody>
+			</table>
 			</td>
 		</tr>
 	</tbody>
 </table>
-</center>
+</body>
+</html>
