--- a/pinch-index-draft.html
+++ b/pinch-index-draft.html
@@ -2,7 +2,7 @@
 <head><meta charset="utf-8">
 	<title></title>
 </head>
-<body style="background-color:ffff00;">
+<body style="background-color:0000ff;">
 <p></p>
 
 <table align="center" border="2" cellpadding="15" cellspacing="2" height="421" width="700">
