--- a/pinch-index-draft.html
+++ b/pinch-index-draft.html
@@ -46,7 +46,7 @@
 				<tbody>
 					<tr>
 						<td style="text-align: center;"><img alt="" src="https://tinmittrecords.github.io/tinmittlogo.jpg" style="width: 87px; height: 87px;" /></td>
-						<td><span style="font-size:22px;">FOLLOW US ON:</span><br />
+						<td style="text-align: center;"><span style="font-size:22px;">FOLLOW US ON:</span><br />
 						<span style="font-size:22px;"><a href="https://tinmitt.bandcamp.com" target="_blank">BANDCAMP</a><br />
 						<a href="https://instagram.com/tinmittrecords" target="_blank">INSTAGRAM</a></span></td>
 					</tr>
