--- a/pinch-liner-notes-draft.html
+++ b/pinch-liner-notes-draft.html
@@ -9,7 +9,7 @@
 <table align="center" bgcolor="ffffff" border="2" cellpadding="0" cellspacing="1" style="width:750px;">
 	<tbody>
 		<tr>
-			<td><img alt="" src="pinchbanner.png" style="border-width: 0px; border-style: solid; margin: 0px; width: 740px; height: 136px;" /></td>
+			<td><img alt="" src="pinchbanner2.png" style="border-width: 0px; border-style: solid; margin: 0px; width: 740px; height: 136px;" /></td>
 		</tr>
 		<tr>
 			<td>
@@ -25,7 +25,7 @@
 					<tr>
 					</tr>
 					<tr>
-						<td><img alt="" src="https://f4.bcbits.com/img/a2512944528_10.jpg" style="width: 200px; height: 200px;" /></td>
+						<td><img alt="" src="pinchartwork.png" style="width: 200px; height: 200px;" /></td>
 						<td><span style="font-size:28px;"><strong>1. </strong><a href="#intro">Introduction</a><br />
 						<strong>2.</strong> <a href="#safehaven">Baltimore Safe Haven</a><br />
 						<strong>3.</strong> <a href="#albumcredits">Album Credits</a><br />
